Fix homepage header on IE

--- a/public/assets/css/ie.styl
+++ b/public/assets/css/ie.styl
@@ -3,7 +3,15 @@
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
   * {
-    font-feature-settings normal !important;
+    font-feature-settings normal !important
   }
   
+  nav .logo {
+    background-image url("/assets/img/logo/ie-icon.png") !important
+  }
+  
+  header main {
+    display inline-block !important
+    margin: 0 !important
+  }
 }
